--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #57595e;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +35,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.box{
+  width:300px;
+  height:100px;
+  border-radius: 20px;
+  border: 2px dashed rgb(152, 154, 152);
+  background-color:#fff;
+  color:#000;
+
 }
